// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner/> render properly with just a sub-title 1`] = `
<div
  class="StyledBanner__Container-fl6ry-0 gJbaqX"
>
  <h2
    class="StyledBanner__SubTitle-fl6ry-2 jqWyBE"
  >
    Watch anywhere
  </h2>
</div>
`;

exports[`<Banner/> render properly with just a title 1`] = `
<div
  class="StyledBanner__Container-fl6ry-0 gJbaqX"
>
  <h1
    class="StyledBanner__Title-fl6ry-1 hzQtlr"
  >
    Unlimited films
  </h1>
</div>
`;

exports[`<Banner/> render properly with sub-components & children 1`] = `
<div
  class="StyledBanner__Container-fl6ry-0 gJbaqX"
>
  <h1
    class="StyledBanner__Title-fl6ry-1 hzQtlr"
  >
    Unlimited movies
  </h1>
  <h2
    class="StyledBanner__SubTitle-fl6ry-2 jqWyBE"
  >
    Watch anywhere
  </h2>
</div>
`;
